--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#" class="navbar-brand">My Portfolio</a>
 
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="Assignment.html" class="nav-link">About Me!</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">About Me!</a></li>
                 <li class="nav-item"><a href="Assignment2.html" class="nav-link">My Gallery!</a></li>
                 <li class="nav-item"><a href="Assignment3.html" class="nav-link">Contact Me!</a></li>
             </ul>
@@ -133,7 +133,7 @@
 
             <ul class="footer-links">
                 <li class="footer-item">
-                    <a href="Assignment.html" class="footer-link">About Me!</a>
+                    <a href="index.html" class="footer-link">About Me!</a>
                 </li>
                 <li class="footer-item">
                     <a href="Assignment2.html" class="footer-link">My Gallery!</a>
